--- a/task2/package.json
+++ b/task2/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apidoc": "^0.20.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "uniqid": "^5.2.0"
